--- a/QA_LEGEND_PROJECT/test-output/emailable-report.html
+++ b/QA_LEGEND_PROJECT/test-output/emailable-report.html
@@ -9,68 +9,28 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test Report</a></td><td class="num">0</td><td class="num attn">3</td><td class="num">0</td><td class="num">0</td><td class="num">7,343</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Jenkins Test</a></td><td class="num">0</td><td class="num attn">1</td><td class="num">0</td><td class="num">0</td><td class="num">1,788</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test Report &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="3">test.UsersPageTest</td><td><a href="#m0">setUp</a></td><td rowspan="3">1719901336295</td><td rowspan="3">2137</td></tr><tr class="failedeven"><td><a href="#m1">setUp</a></td></tr><tr class="failedeven"><td><a href="#m2">setUp</a></td></tr><tr><th colspan="4">Test Report &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="3">test.UsersPageTest</td><td><a href="#m3">verifyDeleteFunctionality</a></td><td rowspan="1">1719901336117</td><td rowspan="1">0</td></tr><tr class="skippedeven"><td><a href="#m4">verifyEditFunctionality</a></td><td rowspan="1">1719901338443</td><td rowspan="1">0</td></tr><tr class="skippedeven"><td><a href="#m5">verifyViewFunctionality</a></td><td rowspan="1">1719901340556</td><td rowspan="1">0</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Jenkins Test &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">test.ProfilePageTest</td><td><a href="#m0">setUp</a></td><td rowspan="1">1719908351433</td><td rowspan="1">1581</td></tr><tr><th colspan="4">Jenkins Test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">test.ProfilePageTest</td><td><a href="#m1">verifyProfileUpdate</a></td><td rowspan="1">1719908353024</td><td rowspan="1">0</td></tr></tbody>
 </table>
-<h2>Test Report</h2><h3 id="m0">test.UsersPageTest#setUp</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
+<h2>Jenkins Test</h2><h3 id="m0">test.ProfilePageTest#setUp</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Chrome</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
 	at java.base/java.util.Objects.requireNonNull(Objects.java:208)
 	at java.base/java.util.ImmutableCollections$Map1.&lt;init&gt;(ImmutableCollections.java:1105)
 	at java.base/java.util.Map.of(Map.java:1353)
 	at org.openqa.selenium.remote.DriverCommand.GET(DriverCommand.java:180)
 	at org.openqa.selenium.remote.RemoteWebDriver.get(RemoteWebDriver.java:301)
 	at automationCore.Base.initialiseBrowser(Base.java:61)
-	at automationCore.Base.setUp(Base.java:68)
+	at automationCore.Base.setUp(Base.java:69)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
 ... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">test.UsersPageTest#setUp</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
+<h3 id="m1">test.ProfilePageTest#verifyProfileUpdate</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
 	at java.base/java.util.Objects.requireNonNull(Objects.java:208)
 	at java.base/java.util.ImmutableCollections$Map1.&lt;init&gt;(ImmutableCollections.java:1105)
 	at java.base/java.util.Map.of(Map.java:1353)
 	at org.openqa.selenium.remote.DriverCommand.GET(DriverCommand.java:180)
 	at org.openqa.selenium.remote.RemoteWebDriver.get(RemoteWebDriver.java:301)
 	at automationCore.Base.initialiseBrowser(Base.java:61)
-	at automationCore.Base.setUp(Base.java:68)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">test.UsersPageTest#setUp</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at java.base/java.util.Objects.requireNonNull(Objects.java:208)
-	at java.base/java.util.ImmutableCollections$Map1.&lt;init&gt;(ImmutableCollections.java:1105)
-	at java.base/java.util.Map.of(Map.java:1353)
-	at org.openqa.selenium.remote.DriverCommand.GET(DriverCommand.java:180)
-	at org.openqa.selenium.remote.RemoteWebDriver.get(RemoteWebDriver.java:301)
-	at automationCore.Base.initialiseBrowser(Base.java:61)
-	at automationCore.Base.setUp(Base.java:68)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">test.UsersPageTest#verifyDeleteFunctionality</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at java.base/java.util.Objects.requireNonNull(Objects.java:208)
-	at java.base/java.util.ImmutableCollections$Map1.&lt;init&gt;(ImmutableCollections.java:1105)
-	at java.base/java.util.Map.of(Map.java:1353)
-	at org.openqa.selenium.remote.DriverCommand.GET(DriverCommand.java:180)
-	at org.openqa.selenium.remote.RemoteWebDriver.get(RemoteWebDriver.java:301)
-	at automationCore.Base.initialiseBrowser(Base.java:61)
-	at automationCore.Base.setUp(Base.java:68)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">test.UsersPageTest#verifyEditFunctionality</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at java.base/java.util.Objects.requireNonNull(Objects.java:208)
-	at java.base/java.util.ImmutableCollections$Map1.&lt;init&gt;(ImmutableCollections.java:1105)
-	at java.base/java.util.Map.of(Map.java:1353)
-	at org.openqa.selenium.remote.DriverCommand.GET(DriverCommand.java:180)
-	at org.openqa.selenium.remote.RemoteWebDriver.get(RemoteWebDriver.java:301)
-	at automationCore.Base.initialiseBrowser(Base.java:61)
-	at automationCore.Base.setUp(Base.java:68)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">test.UsersPageTest#verifyViewFunctionality</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at java.base/java.util.Objects.requireNonNull(Objects.java:208)
-	at java.base/java.util.ImmutableCollections$Map1.&lt;init&gt;(ImmutableCollections.java:1105)
-	at java.base/java.util.Map.of(Map.java:1353)
-	at org.openqa.selenium.remote.DriverCommand.GET(DriverCommand.java:180)
-	at org.openqa.selenium.remote.RemoteWebDriver.get(RemoteWebDriver.java:301)
-	at automationCore.Base.initialiseBrowser(Base.java:61)
-	at automationCore.Base.setUp(Base.java:68)
+	at automationCore.Base.setUp(Base.java:69)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
 ... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
