--- a/QA_LEGEND_PROJECT/test-output/index.html
+++ b/QA_LEGEND_PROJECT/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>C:\Users\NOORA\git\QA_LEGEND_PROJECT\QA_LEGEND_PROJECT\extentreporttestng.xml</span>
+                    <span>C:\Users\NOORA\git\QA_LEGEND_PROJECT\QA_LEGEND_PROJECT\jenkinstestng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,  3 skipped,  </span>
+                    <span class="method-stats">1 method,  1 skipped,  </span>
                   </li>
                   <li>
                     <span class="method-list-title skipped">Skipped methods</span>
@@ -103,17 +103,7 @@
                     <div class="method-list-content skipped suite-Suite">
                       <span>
                         <img src="skipped.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="test.UsersPageTest" class="method navigator-link" hash-for-method="verifyDeleteFunctionality">verifyDeleteFunctionality</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="skipped.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="test.UsersPageTest" class="method navigator-link" hash-for-method="verifyEditFunctionality">verifyEditFunctionality</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="skipped.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="test.UsersPageTest" class="method navigator-link" hash-for-method="verifyViewFunctionality">verifyViewFunctionality</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="test.ProfilePageTest" class="method navigator-link" hash-for-method="verifyProfileUpdate">verifyProfileUpdate</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content skipped suite-Suite -->
@@ -131,14 +121,14 @@
           <div class="suite-Suite-class-skipped">
             <div class="main-panel-header rounded-window-top">
               <img src="skipped.png"/>
-              <span class="class-name">test.UsersPageTest</span>
+              <span class="class-name">test.ProfilePageTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verifyDeleteFunctionality">
-                  </a> <!-- verifyDeleteFunctionality -->
-                  <span class="method-name">verifyDeleteFunctionality</span>
+                  <a name="verifyProfileUpdate">
+                  </a> <!-- verifyProfileUpdate -->
+                  <span class="method-name">verifyProfileUpdate</span>
                   <div class="stack-trace">java.lang.NullPointerException
 	at java.base/java.util.Objects.requireNonNull(Objects.java:208)
 	at java.base/java.util.ImmutableCollections$Map1.&lt;init&gt;(ImmutableCollections.java:1105)
@@ -146,43 +136,7 @@
 	at org.openqa.selenium.remote.DriverCommand.GET(DriverCommand.java:180)
 	at org.openqa.selenium.remote.RemoteWebDriver.get(RemoteWebDriver.java:301)
 	at automationCore.Base.initialiseBrowser(Base.java:61)
-	at automationCore.Base.setUp(Base.java:68)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 31 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyEditFunctionality">
-                  </a> <!-- verifyEditFunctionality -->
-                  <span class="method-name">verifyEditFunctionality</span>
-                  <div class="stack-trace">java.lang.NullPointerException
-	at java.base/java.util.Objects.requireNonNull(Objects.java:208)
-	at java.base/java.util.ImmutableCollections$Map1.&lt;init&gt;(ImmutableCollections.java:1105)
-	at java.base/java.util.Map.of(Map.java:1353)
-	at org.openqa.selenium.remote.DriverCommand.GET(DriverCommand.java:180)
-	at org.openqa.selenium.remote.RemoteWebDriver.get(RemoteWebDriver.java:301)
-	at automationCore.Base.initialiseBrowser(Base.java:61)
-	at automationCore.Base.setUp(Base.java:68)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 31 stack frames
-</div> <!-- stack-trace -->
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="verifyViewFunctionality">
-                  </a> <!-- verifyViewFunctionality -->
-                  <span class="method-name">verifyViewFunctionality</span>
-                  <div class="stack-trace">java.lang.NullPointerException
-	at java.base/java.util.Objects.requireNonNull(Objects.java:208)
-	at java.base/java.util.ImmutableCollections$Map1.&lt;init&gt;(ImmutableCollections.java:1105)
-	at java.base/java.util.Map.of(Map.java:1353)
-	at org.openqa.selenium.remote.DriverCommand.GET(DriverCommand.java:180)
-	at org.openqa.selenium.remote.RemoteWebDriver.get(RemoteWebDriver.java:301)
-	at automationCore.Base.initialiseBrowser(Base.java:61)
-	at automationCore.Base.setUp(Base.java:68)
+	at automationCore.Base.setUp(Base.java:69)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
 ... Removed 31 stack frames
 </div> <!-- stack-trace -->
@@ -193,7 +147,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\NOORA\git\QA_LEGEND_PROJECT\QA_LEGEND_PROJECT\extentreporttestng.xml</span>
+            <span class="header-content">C:\Users\NOORA\git\QA_LEGEND_PROJECT\QA_LEGEND_PROJECT\jenkinstestng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -201,14 +155,14 @@
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;listeners&gt;
-    &lt;listener class-name=&quot;listener.ExtentListeners&quot;/&gt;
     &lt;listener class-name=&quot;listener.AnnotationTransformer&quot;/&gt;
   &lt;/listeners&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Test Report&quot;&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Jenkins Test&quot;&gt;
+    &lt;parameter name=&quot;browser&quot; value=&quot;Chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;test.UsersPageTest&quot;/&gt;
+      &lt;class name=&quot;test.ProfilePageTest&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Test Report --&gt;
+  &lt;/test&gt; &lt;!-- Jenkins Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -220,7 +174,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test Report (1 class)</span>
+                <span class="test-name">Jenkins Test (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -246,19 +200,11 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verifyEditFunctionality')
-data.setCell(0, 2, 'test.UsersPageTest')
+data.setCell(0, 1, 'verifyProfileUpdate')
+data.setCell(0, 2, 'test.ProfilePageTest')
 data.setCell(0, 3, 0);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyViewFunctionality')
-data.setCell(1, 2, 'test.UsersPageTest')
-data.setCell(1, 3, 0);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'verifyDeleteFunctionality')
-data.setCell(2, 2, 'test.UsersPageTest')
-data.setCell(2, 3, 0);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
@@ -289,36 +235,16 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">test.UsersPageTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">test.ProfilePageTest</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">setUp</span>
+                <span class="method-name">setUp(Chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="configuration-method after">
-                <span class="method-name">closeBrowser([TestResult name=verifyDeleteFunctionality status=SKIP method=UsersPageTest.verifyDeleteFunctionalit...)</span>
-                <span class="method-start">2686 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">setUp</span>
-                <span class="method-start">2833 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="configuration-method after">
-                <span class="method-name">closeBrowser([TestResult name=verifyEditFunctionality status=SKIP method=UsersPageTest.verifyEditFunctionality()[...)</span>
-                <span class="method-start">5017 ms</span>
-              </div> <!-- configuration-method after -->
-              <div class="configuration-method before">
-                <img src="failed.png">
-                </img>
-                <span class="method-name">setUp</span>
-                <span class="method-start">5148 ms</span>
-              </div> <!-- configuration-method before -->
-              <div class="configuration-method after">
-                <span class="method-name">closeBrowser([TestResult name=verifyViewFunctionality status=SKIP method=UsersPageTest.verifyViewFunctionality()[...)</span>
-                <span class="method-start">7103 ms</span>
+                <span class="method-name">closeBrowser([TestResult name=verifyProfileUpdate status=SKIP method=ProfilePageTest.verifyProfileUpdate()[pri:0,...)</span>
+                <span class="method-start">1595 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
