--- a/QA_LEGEND_PROJECT/test-output/emailable-report.html
+++ b/QA_LEGEND_PROJECT/test-output/emailable-report.html
@@ -9,29 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Jenkins Test</a></td><td class="num">0</td><td class="num attn">1</td><td class="num">0</td><td class="num">0</td><td class="num">1,788</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Functional Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">29,291</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Jenkins Test &#8212; failed (configuration methods)</th></tr><tr class="failedeven"><td rowspan="1">test.ProfilePageTest</td><td><a href="#m0">setUp</a></td><td rowspan="1">1719908351433</td><td rowspan="1">1581</td></tr><tr><th colspan="4">Jenkins Test &#8212; skipped</th></tr><tr class="skippedeven"><td rowspan="1">test.ProfilePageTest</td><td><a href="#m1">verifyProfileUpdate</a></td><td rowspan="1">1719908353024</td><td rowspan="1">0</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Functional Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">test.ProfilePageTest</td><td><a href="#m0">verifyProfileUpdate</a></td><td rowspan="1">1719909658623</td><td rowspan="1">7443</td></tr></tbody>
 </table>
-<h2>Jenkins Test</h2><h3 id="m0">test.ProfilePageTest#setUp</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Chrome</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at java.base/java.util.Objects.requireNonNull(Objects.java:208)
-	at java.base/java.util.ImmutableCollections$Map1.&lt;init&gt;(ImmutableCollections.java:1105)
-	at java.base/java.util.Map.of(Map.java:1353)
-	at org.openqa.selenium.remote.DriverCommand.GET(DriverCommand.java:180)
-	at org.openqa.selenium.remote.RemoteWebDriver.get(RemoteWebDriver.java:301)
-	at automationCore.Base.initialiseBrowser(Base.java:61)
-	at automationCore.Base.setUp(Base.java:69)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">test.ProfilePageTest#verifyProfileUpdate</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-	at java.base/java.util.Objects.requireNonNull(Objects.java:208)
-	at java.base/java.util.ImmutableCollections$Map1.&lt;init&gt;(ImmutableCollections.java:1105)
-	at java.base/java.util.Map.of(Map.java:1353)
-	at org.openqa.selenium.remote.DriverCommand.GET(DriverCommand.java:180)
-	at org.openqa.selenium.remote.RemoteWebDriver.get(RemoteWebDriver.java:301)
-	at automationCore.Base.initialiseBrowser(Base.java:61)
-	at automationCore.Base.setUp(Base.java:69)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
-... Removed 31 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Functional Test</h2><h3 id="m0">test.ProfilePageTest#verifyProfileUpdate</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
